add lienhe page

--- a/load-balancer/resource/lienhe.html
+++ b/load-balancer/resource/lienhe.html
@@ -10,7 +10,40 @@
 </head>
 
 <body>
-  
+  <h1 class="text-center">Contact List</h1>
+  <br>
+  <br>
+  <br>
+  <table class="table table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col" class="text-center">image</th>
+        <th scope="col" class="text-center">name</th>
+        <th scope="col" class="text-center">mssv</th>
+        <th scope="col" class="text-center">email</th>
+        <th scope="col" class="text-center">phone</th>
+        <th scope="col" class="text-center">facebook</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th class="text-center"><img src="images/linhnguyen.jpg" class="rounded-circle" width="40px" height="40px"></th>
+        <th class="text-center" id="linhnguyen">Nguyễn Văn Linh</th>
+        <th class="text-center align-middle">16123340</th>
+        <th class="text-center align-middle">linh1612340@gmail.com</th>
+        <th class="text-center align-middle">0704468256</th>
+        <th class="text-center align-middle">facebook.com/linhnguyenID</th>
+      </tr>
+      <tr>
+        <th class="text-center"><img src="images/khuedoan.jpg" class="rounded-circle" width="40px" height="40px"></th>
+        <th class="text-center align-middle">Đoàn Khuê</th>
+        <th class="text-center align-middle">1612311</th>
+        <th class="text-center align-middle">mail@khuedoan.com</th>
+        <th class="text-center align-middle">0347773728</th>
+        <th class="text-center align-middle">facebook.com/khuedoanID</th>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
