add poll, thread serve client

--- a/load-balancer/resource/index.html
+++ b/load-balancer/resource/index.html
@@ -22,7 +22,7 @@
           <p class="card-text"><strong>height</strong>: 173 cm</p>
           <p class="card-text"><strong>type</strong>: non virgin</p>
           <p class="card-text"><strong>price</strong>: 14.99$</p>
-          <a href="lienhe.html#linhnguyen" class="btn btn-primary">contact now</a>
+          <a href="lienhe.html" class="btn btn-primary">contact now</a>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
           <p class="card-text"><strong>height</strong>: 168 cm</p>
           <p class="card-text"><strong>type</strong>: virgin</p>
           <p class="card-text"><strong>price</strong>: 19.99$</p>
-          <a href="lienhe.html#khuedoan" class="btn btn-primary">contact now</a>
+          <a href="lienhe.html" class="btn btn-primary">contact now</a>
         </div>
       </div>
     </div>
