add phamtin infor

--- a/load-balancer/resource/index.html
+++ b/load-balancer/resource/index.html
@@ -15,32 +15,47 @@
 
       <div class="col">
         <div class="card mx-auto" style="width: 300px;">
-        <img class="card-img-top" src="images/linhnguyen.jpg" alt="linh image" width="300" height="300">
-        <div class="card-body">
-          <p class="card-text"><strong>age</strong>: 22</p>
-          <p class="card-text"><strong>weight</strong>: 58 kg</p>
-          <p class="card-text"><strong>height</strong>: 173 cm</p>
-          <p class="card-text"><strong>type</strong>: non virgin</p>
-          <p class="card-text"><strong>price</strong>: 14.99$</p>
-          <a href="lienhe.html" class="btn btn-primary">contact now</a>
+          <img class="card-img-top" src="images/linhnguyen.jpg" alt="linh image" width="300" height="300">
+          <div class="card-body">
+            <p class="card-text"><strong>age</strong>: 22</p>
+            <p class="card-text"><strong>weight</strong>: 58 kg</p>
+            <p class="card-text"><strong>height</strong>: 173 cm</p>
+            <p class="card-text"><strong>type</strong>: non virgin</p>
+            <p class="card-text"><strong>price</strong>: 14.99$</p>
+            <a href="lienhe.html" class="btn btn-primary">contact now</a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col">
-      <div class="card mx-auto" style="width: 300px;">
-        <img class="card-img-top" src="images/khuedoan.jpg" alt="khue image" width="300" height="300">
-        <div class="card-body">
-          <p class="card-text"><strong>age</strong>: 22</p>
-          <p class="card-text"><strong>weight</strong>: 62 kg</p>
-          <p class="card-text"><strong>height</strong>: 168 cm</p>
-          <p class="card-text"><strong>type</strong>: virgin</p>
-          <p class="card-text"><strong>price</strong>: 19.99$</p>
-          <a href="lienhe.html" class="btn btn-primary">contact now</a>
+      <div class="col">
+        <div class="card mx-auto" style="width: 300px;">
+          <img class="card-img-top" src="images/khuedoan.jpg" alt="khue image" width="300" height="300">
+          <div class="card-body">
+            <p class="card-text"><strong>age</strong>: 22</p>
+            <p class="card-text"><strong>weight</strong>: 62 kg</p>
+            <p class="card-text"><strong>height</strong>: 168 cm</p>
+            <p class="card-text"><strong>type</strong>: virgin</p>
+            <p class="card-text"><strong>price</strong>: 19.99$</p>
+            <a href="lienhe.html" class="btn btn-primary">contact now</a>
+          </div>
         </div>
       </div>
+
+      <div class="col">
+        <div class="card mx-auto" style="width: 300px;">
+          <img class="card-img-top" src="images/tinpham.jpg" alt="tin image" width="300" height="300">
+          <div class="card-body">
+            <p class="card-text"><strong>age</strong>: 22</p>
+            <p class="card-text"><strong>weight</strong>: 64 kg</p>
+            <p class="card-text"><strong>height</strong>: 165 cm</p>
+            <p class="card-text"><strong>type</strong>: virgin</p>
+            <p class="card-text"><strong>price</strong>: 9.99$</p>
+            <a href="lienhe.html" class="btn btn-primary">contact now</a>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </div>
   </div>
 </body>
 
