--- a/load-balancer/resource/lienhe.html
+++ b/load-balancer/resource/lienhe.html
@@ -42,6 +42,14 @@
         <th class="text-center align-middle">0347773728</th>
         <th class="text-center align-middle">facebook.com/khuedoanID</th>
       </tr>
+      <tr>
+        <th class="text-center"><img src="images/tinpham.jpg" class="rounded-circle" width="40px" height="40px"></th>
+        <th class="text-center align-middle">Phạm Tín</th>
+        <th class="text-center align-middle">1612695</th>
+        <th class="text-center align-middle">phamtrungtintf1512@gmail.com</th>
+        <th class="text-center align-middle">0834691174</th>
+        <th class="text-center align-middle">facebook.com/tinpham1512</th>
+      </tr>
     </tbody>
   </table>
 </body>
